Modify RegAction and add new Actions(subscribe & unsubscribe) Modify: -BotMenu -ChatId, ChatIdService -RegAction -TgAuthCallWebClint, TgConfig, TgRun Add: -CategoryDTO -SubscribeAction (not complete) -UnsubscribeAction (not complete) -Add new column to ChatId